tests/transpiler/x/scala/pure_global_fold.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/pure_global_fold.scala:5: error: not found: value k
    return x + k
               ^
one error found
