tests/transpiler/x/scala/pure_global_fold.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:42:57 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def inc(x: Int): Int = {
    return x + k
  }

  def main(args: Array[String]): Unit = {
    val k: Int = 2
    println(inc(3))
  }
}
